--- a/skripsiRepo1/src/main/resources/application.properties
+++ b/skripsiRepo1/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port = 8281
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://localhost:3306/skripsimodel
+spring.datasource.username=root
+spring.datasource.password=SINCE1999
 
